# DuolingoCLI

./: .gitignore  README.md  pyproject.toml
src/duolingo_cli/: __init__.py  api.py  config.py  main.py  practice.py  ui.py
