[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duolingo-cli"
version = "0.1.0"
description = "🦉 CLI tool to practice Duolingo lessons from your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DuolingoCLI"}
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "keyring>=25.0",
]

[project.scripts]
duo = "duolingo_cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
